<resources>
    //Google Maps API Key
    <string name="google_map_api_key">AIzaSyAgG62iQ_1oIwPj_XsiDf8b7U-ZMgTlHVg</string>


    // Landing Page
    <string name="hello">Hello,</string>

    // Global Strings
    <string name="shopping_list_header">Shopping List</string>

    // Headers
    <string name="app_name">Personal Shopper</string>
    <string name="title_activity_shopping">Shopping Activity</string>
    <string name="title_shopping_requests">Search</string>
    <string name="title_active_request">Track</string>
    <string name="title_history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Account Settings
    <string name="change_account_type">Change Account Type</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="sign_out">Sign Out</string>

    // Personal Shopper
    <string name="btn_shopper_available">Available</string>
    <string name="btn_shopper_unavailable">Unavailable</string>
    <string name="btn_shopper_search">Refresh</string>
    <string name="btn_shopper_select_customer">Accept</string>

    // Customer
    <string name="btn_customer_create_request">Request</string>
    <string name="btn_customer_view_pending_request">View Pending</string>
    <string name="btn_customer_search">Refresh</string>
    <string name="btn_customer_select_shopper">Select Shopper</string>

    // Active Request
    <string name="role_text">Role:</string>
</resources>
